--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -1,11 +1,1 @@
-{% extends 'base.html'%} 
-
-{%block head%}
-
-{%endblock%} 
-
-{%block body%}
-
-<h2>Doc</h2>
-
-{%endblock%}
+{% extends 'base.html'%} {%block head%} {%endblock%} {%block body%} {%endblock%}
