--- a/templates/BitDict.html
+++ b/templates/BitDict.html
@@ -51,7 +51,7 @@
             },
         });
       </script>
-      <h2 class='table__title'>Prediction Tables</small></h2>
+      <h2 class='table__title border-bottom mb-4'>Prediction Tables</small></h2>
       <table class="table">
         <tr class="table__header">
           <th class="table_cell">Date</th>
