--- a/templates/BitDict.html
+++ b/templates/BitDict.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%} {%block head%} {%endblock%} {%block body%}
 <div class="content-section">
-  <form method="POST" action="/BitDict">
+  <form method="POST" action="">
     {{ form.hidden_tag()}}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Predict</legend>
